--- a/landings/midesafe/index.html
+++ b/landings/midesafe/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Enersafe - Midesafe</title>
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -75,7 +76,7 @@
                 </div>
             </div>
         </section>
-        <section class="container pt-40 pb-80">
+        <section class="container pt-40 pb-40">
             <div class="row">
                 <div class="col-md-6" id="incluye">
                     <h3 class="mb-4">¿Qué <span>Incluye</span>?</h3>
@@ -100,46 +101,6 @@
                         <li>Cumplimiento al 100% con requerimientos del SAT de la SHCP y de la CRE.​</li>
                         <li>Revisado por unidades de inspección acreditadas para controles volumétricos.​</li>
                     </ul>
-                </div>
-            </div>
-        </section>
-        <div id="banner2">
-            <div class="container h-100">
-                <div class="row h-100">
-                    <div class="col-lg-8 mx-auto text-center d-flex align-items-center justify-content-center">
-                        <h4 class="text-white">Te proporcionaremos tu certificado del SAT y una carta de programación
-                            para la visita del Tercero Autorizado.​</h4>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-        <section class="container pt-80 pb-40">
-            <div class="row">
-                <div class="col-md-12 text-center mb-4 pb-4">
-                    <h3 class="mb-4"><span>Cumple</span> con todos los requerimientos</h3>
-                </div>
-                <div class="col-md-4 text-center mb-5">
-                    <img src="img/sat.png" alt="SAT">
-                </div>
-                <div class="col-md-4 text-center mb-5">
-                    <img src="img/shcp.png" alt="SHCP">
-                </div>
-                <div class="col-md-4 text-center mb-5">
-                    <img src="img/cre.png" alt="CRE">
-                </div>
-            </div>
-        </section>
-        <section class="container pt-40 pb-40" id="conoce">
-            <div class="row">
-                <div class="col-md-12 text-center mb-4 pb-4">
-                    <h3 class="mb-4">Conoce más de <span>Mediasafe</span></h3>
-                </div>
-                <div class="col-md-10 mx-auto text-center mb-5">
-                    <div class="ratio ratio-16x9">
-                        <iframe src="https://www.youtube.com/embed/8Lwn2wVpfk8?rel=0" title="YouTube video"
-                            allowfullscreen></iframe>
-                    </div>
                 </div>
             </div>
         </section>
@@ -207,6 +168,47 @@
                 </div>
             </div>
         </section>
+        <div id="banner2">
+            <div class="container h-100">
+                <div class="row h-100">
+                    <div class="col-lg-8 mx-auto text-center d-flex align-items-center justify-content-center">
+                        <h4 class="text-white">Te proporcionaremos tu certificado del SAT y una carta de programación
+                            para la visita del Tercero Autorizado.​</h4>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <section class="container pt-80 pb-40">
+            <div class="row">
+                <div class="col-md-12 text-center mb-4 pb-4">
+                    <h3 class="mb-4"><span>Cumple</span> con todos los requerimientos</h3>
+                </div>
+                <div class="col-md-4 text-center mb-5">
+                    <img src="img/sat.png" alt="SAT">
+                </div>
+                <div class="col-md-4 text-center mb-5">
+                    <img src="img/shcp.png" alt="SHCP">
+                </div>
+                <div class="col-md-4 text-center mb-5">
+                    <img src="img/cre.png" alt="CRE">
+                </div>
+            </div>
+        </section>
+        <!-- <section class="container pt-40 pb-40" id="conoce">
+            <div class="row">
+                <div class="col-md-12 text-center mb-4 pb-4">
+                    <h3 class="mb-4">Conoce más de <span>Mediasafe</span></h3>
+                </div>
+                <div class="col-md-10 mx-auto text-center mb-5">
+                    <div class="ratio ratio-16x9">
+                        <iframe src="https://www.youtube.com/embed/8Lwn2wVpfk8?rel=0" title="YouTube video"
+                            allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+        </section> -->
+       
         <footer>
             <p class="text-white mb-0">Enersafe 2023. Todos los derechos reservados</p>
         </footer>
