--- a/landings/midesafe/index.html
+++ b/landings/midesafe/index.html
@@ -151,7 +151,10 @@
                         <div class="col-md-12 mb-3">
                             <div class="form-group">
                                 <label for="estado" class="mb-2">Estado:</label>
-                                <input type="text" class="form-control" name="estado">
+                                <select name="estado" id="" class="form-control">
+                                    <option selected disabled>Seleccione su estado</option>
+                                </select>
+                                
                             </div>
                         </div>
                         <div class="col-md-12 mb-3">
