--- a/landings/midesafe/index.html
+++ b/landings/midesafe/index.html
@@ -121,7 +121,7 @@
                         <li><p>Revisado por unidades de inspección acreditadas para controles volumétricos.</p></li>
                         <li><p>Económico, rápido y fácil de operar.</p></li>
                         <li><p>No se requiere personal adicional ni especializado.</p></li>
-                        <li><p>Sistema escalable al SASISOP.</p></li>
+                        <li><p>Sistema escalable al SASISOPA.</p></li>
                     </ul>
                 </div>
 
