--- a/landings/midesafe/index.html
+++ b/landings/midesafe/index.html
@@ -56,13 +56,13 @@
             <div class="container h-100">
                 <div class="row h-100">
                     <div
-                        class="col-lg-4 d-flex flex-column align-items-lg-start align-items-center justify-content-center">
+                        class="col-lg-12 d-flex flex-column align-items-center justify-content-center z-index">
                         <h2 class="text-white">Cumple con el SAT y evita sanciones​.</h2>
                         <a class="mt-4 nav-link btn btn-yellow" href="#incluye">Conoce más</a>
                     </div>
-                    <div class="col-lg-8 d-flex align-items-end text-center">
+                   <!--  <div class="col-lg-8 d-flex align-items-end text-center">
                         <img src="img/estacion.png" class="img-fluid">
-                    </div>
+                    </div> -->
                 </div>
 
             </div>
